--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/noleggio?createDatabaseIfNotExist=true
 jdbc.username = root
-jdbc.password = hud9jido9
+jdbc.password = root
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = false
 hibernate.format_sql = false
 hibernate.hbm2ddl.auto = update
+
