--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,8 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/noleggio?createDatabaseIfNotExist=true
 jdbc.username = root
-<<<<<<< HEAD
-jdbc.password = 1234
-=======
-jdbc.password = root
->>>>>>> 50aa6247f3c425732e1b9c75d631da4421f7d701
+jdbc.password = hud9jido9
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = false
 hibernate.format_sql = false
 hibernate.hbm2ddl.auto = update
-
