--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/noleggio?createDatabaseIfNotExist=true
+jdbc.url = jdbc:mysql://localhost:3306/noleggio?createDatabaseIfNotExist=true&useSSL=false
 jdbc.username = root
 jdbc.password = hud9jido9
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
