--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
 
 	<dependencies>
 
+		<!-- Serialize e Deserialize JSON LocalDate -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.6</version>
+		</dependency>
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
